--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
+<li><a href="https://the-era-entresol.pages.dev/">Home</a></li>
 </ul>
 <hr>
 <img src="7 Happening Meow Digital.png" width="100%" height="100%">
