--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </ul>
 <ol id="objects">
 <li><a target="_self" href="text-1.html">The Era Entresol Goes Live! [10/1/2024]</a></li>
+<li><a target="_self" href="text-2.html">DMCA & Takedown Request Policy [10/4/2024]</a></li>
 </ol>
 <ul>
 <li><a href="#top" id="bottom">Return To Top</a></li>
