--- a/text-2.html
+++ b/text-2.html
@@ -5,14 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="icon.png">
 <link rel="stylesheet" href="main.css">
-<title>Anti DMCA & Takedown Request Policy</title>
+<title>Maximum Freedom Policy</title>
 </head>
 <body>
-<h1>Anti DMCA & Takedown Request Policy</h1>
+<h1>Maximum Freedom Policy</h1>
 <hr>
-<embed src="2 Anti DMCA & Takedown Request Policy.txt" width="100%" height="100%">
+<embed src="2 Maximum Freedom Policy.txt" width="100%" height="100%">
 <hr>
-<p><a target="_blank" href="2 Anti DMCA & Takedown Request Policy.txt">Open Text In New Tab</a></p>
+<p><a target="_blank" href="2 Maximum Freedom Policy.txt">Open Text In New Tab</a></p>
 <p><a target="_self" href="index.html">Return To The Text Page</a></p>
 </body>
 </html>
